# PSDtoSVG

./: .gitignore  PSD to SVG.webloc  Procfile  README.md  datademofun-heroku-basic-flask- Example of deploying a Python Fl.webloc  index.html  potrace.py  psdtosvg.py  requirements.txt
additional/: psdtosvg.py
additional/templates/: animations.html
assets/: __vite-browser-external-2-9uB3Xa.js  __vite-browser-external-BFFeWDRK.js  __vite-browser-external-BGdTjjQK.js  __vite-browser-external-CFFjqXsn.js  __vite-browser-external-CMKLfyky.js  __vite-browser-external-CeG8EQ3R.js  __vite-browser-external-Cpmlj7LY.js  __vite-browser-external-DqSXE8OT.js  __vite-browser-external-FU5lR72J.js  __vite-browser-external-MxBdS5vT.js  __vite-browser-external-pD3k4zxU.js  __vite-browser-external-tJsxJD85.js  index-3mZ5Wze0.js  index-B3bJobR_.css  index-BF4z4Ov2.js  index-BZvlPazd.js  index-Bd6TAhrb.js  index-C4KfRopb.js  index-CdXBoFek.js  index-Ct4u65ms.js  index-CzeVUKMS.css  index-D2sn7ogd.css  index-DL2R6nSj.js  index-DSd6odc-.js  index-DTiYv7Ub.js  index-DzZnrmji.js  index-L5Ez4WDh.css  index-c8uWfUMx.css  index-vjLwKSvE.js  svg-generate.service.pyodide-Biot1vXr.js  svg-generate.service.pyodide-CQ2L9XMX.js  svg-generate.service.pyodide-DmfLgN1V.js
assets/pyodide/: psd_tools-1.16.0-cp313-cp313-emscripten_4_0_9_wasm32.whl  psdtosvg-1.0.0-py3-none-any.whl
flask/: README.md  app.py  build.py  requirements.txt
flask/static/: beetle.psd  index.html
flask/static/assets/: index-CccuLDgN.js  index-Cj8sX_gE.css  index-D0tExVRl.js  index-DO4-CQX6.js  index-DVYe5WTA.js  svg-generate.service.backend-286CyjFN.js
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: main.tsx
frontend/src/components/: App.tsx  CarGraphic.tsx  InteractCodeSnippet.tsx
frontend/src/services/: svg-animation.service.test.ts  svg-animation.service.ts  svg-generate.service.backend.ts  (+4 more)
psd-to-svg/: index.html  package.json  vite.config.ts
psd-to-svg/src/: App.tsx
pyodide/: README.md  package-lock.json  package.json  vite.config.ts
pyodide/src/: AnimateCodeSnippet.tsx  App.tsx  PlaygroundGraphic.tsx  index.css  pyodide-interface.ts  svg-animation.service.ts  svg-generate.pyodide.service.ts  svg-generate.service.pyodide.ts  svg-playground.service.test.ts
src/potrace/: README.md  __init__.py  pyproject.toml
src/psdtosvg/: README.md  __init__.py  psdtosvg.py  pyproject.toml
src/psdtosvg/src/psdtosvg/: potrace.py  psdtosvg.py
src/psdtosvg/tests/: test_psdtosvg.py
templates/: index.html  svgmanipulator.html
(+26 files in other folders)
