[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psdtosvg"
version = "1.0.0"
description = "A Python package for converting PSD files to SVG format"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Greg DiCristofaro"}
]
requires-python = ">=3.8"
dependencies = [
    "psd-tools>=1.9.0",
    "Pillow>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/gdicristofaro/PSDtoSVG"
Repository = "https://github.com/gdicristofaro/PSDtoSVG"

[tool.setuptools.packages.find]
where = ["."]
include = ["psdtosvg*"]

[tool.setuptools.package-data]
psdtosvg = ["*.py"]