[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "psdtosvg"
version = "1.0.0"
description = "A Python package for converting PSD files to SVG format"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Greg DiCristofaro"}
]
requires-python = ">=3.8"
dependencies = [
    "psd-tools>=1.10.13",
    "Pillow>=11.3.0",
]

[project.urls]
Homepage = "https://github.com/gdicristofaro/PSDtoSVG"
Repository = "https://github.com/gdicristofaro/PSDtoSVG"

[tool.setuptools.packages.find]
where = ["src"]
